WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192923
Unparented WKWebView can't retrieve main resource data for a main frame plugin
https://bugs.webkit.org/show_bug.cgi?id=192923
Summary
Unparented WKWebView can't retrieve main resource data for a main frame plugin
Tim Horton
Reported
2018-12-20 01:01:27 PST
Unparented WKWebView can't retrieve main resource data for a main frame plugin
Attachments
Patch
(9.98 KB, patch)
2018-12-20 01:01 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-12-20 01:01:55 PST
Created
attachment 357801
[details]
Patch
Tim Horton
Comment 2
2018-12-20 01:02:02 PST
<
rdar://problem/46859068
>
WebKit Commit Bot
Comment 3
2018-12-20 09:35:25 PST
Comment on
attachment 357801
[details]
Patch Clearing flags on attachment: 357801 Committed
r239442
: <
https://trac.webkit.org/changeset/239442
>
WebKit Commit Bot
Comment 4
2018-12-20 09:35:26 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug